--- a/text/survival.Rmd
+++ b/text/survival.Rmd
@@ -1,15 +1,13 @@
-If our clusters represent biological states
-distinct from tissue of origin, they may have different prognoses within cancer
-types or across all cancers. These analyses are limited by confounding factors
-of age and stage at diagnosis, sex, ethnicity, and tissue-specific disease
-progression. To explore these ideas, we used Bayesian inference to test models
-of survival using
-public longevity data from the CDC.
-Our model estimates the effect of cancer type and cluster-specific cancer
-effects independently, resulting in a cancer and cluster-specific estimate of
-the aging rate multiplier, $k$.
+If our clusters represent biological states distinct from tissue of origin, they
+may have different prognoses within cancer types or across all cancers. These
+analyses are limited by confounding factors of age and stage at diagnosis, sex,
+ethnicity, and tissue-specific disease progression. To explore these ideas, we
+used Bayesian inference to test models of survival using public longevity data
+from the CDC. Our model estimates the effect of cancer type and cluster-specific
+cancer effects independently, resulting in a cancer and cluster-specific
+estimate of the aging rate multiplier, $k$.
 
-To illustrate the model, in **Figure 7A** we simulate survival time curves
+To illustrate the model, in **Figure 5A** we simulate survival time curves
 for four related groups. We start with a cohort of women aged 30 and show their
 expected survival (light blue). By setting their cancer rate multiplier to $k=2$
 we can simulate the effect of a moderately deadly cancer (yellow). Compare this
@@ -26,11 +24,11 @@ effect of age.
 cat("\\newpage")
 ```
 
-#### Figure 7
+#### Figure 5
 ```{r child='../code/survival/survfig.Rmd'}
 ```
 
-**Figure 7: Comparison of different cancers, simulated and actual results
+**Figure 5: Comparison of different cancers, simulated and actual results
 results.** To illustrate the risk model, we compare survival of four simulated
 cohorts. A) A group consisting of randomly selected 30 year old women (light
 blue) vs. an equal sized group of 30 year old women with cancer, k = 2 (light
@@ -42,17 +40,16 @@ correct age distribution for the given cancer (turqoise) to the model predicted
 survival for the given average k (blue) and the actual survival for the patients
 in our dataset (orange). Differences with actual data are likely due to a
 mixture of cluster identities which we exclude from these simulations for
-simplicity. F) Effects are compared between cancer type by
-showing the probability density for the posterior value of the $k_{tis}$
-multiplier. Larger values correspond to decreased age-independent life
-expectancy.
+simplicity. F) Effects are compared between cancer type by showing the
+probability density for the posterior value of the $k_{tis}$ multiplier. Larger
+values correspond to decreased age-independent life expectancy.
 
 ```{r, results='asis'}
 cat("\\newpage")
 ```
 
 We found that cancer types, as expected, have a range of prognoses relative to
-the general population. In **Figure 7B-E** we see three particularly deadly
+the general population. In **Figure 5B-E** we see three particularly deadly
 cancers (Stomach:STAD, Glioblastoma:GBM, and Pancreatic:PAAD), and one cancer
 where diagnosis apparently decreases risk relative to background (Thyroid:
 THCA). Cancers with posterior probability for relative risk of less than 1 such
@@ -69,9 +66,9 @@ therefore that the diagnosis can increase our expectation of life relative to
 the comparison group, even if it decreases the expectation of life of the
 individual relative to the counterfactual where they did not have cancer.
 
-The degree to which a given cancer accelerates aging can be determined by
-the $k_{tis}$ multiplier (**Figure 8**) multiplied by the cluster modifier $k_{cl}$
-(**Figure 9**). Looking at the tissue specific multiplier, the least deadly was
+The degree to which a given cancer accelerates aging can be determined by the
+$k_{tis}$ multiplier (**Figure 5F**) multiplied by the cluster modifier $k_{cl}$
+(**Figure 6**). Looking at the tissue specific multiplier, the least deadly was
 prostate cancer (PRAD), and the most deadly was glioblastoma (GBM) which has a
 risk multiplier of between 15 and 22 relative to the background risk of death in
 the population. This undoubtedly is influenced by the fact that relatively young
@@ -85,12 +82,12 @@ about 1 to 5 in magnitude.
 cat("\\newpage")
 ```
 
-#### Figure 9
+#### Figure 6
 
 ```{r child='../code/figure9.Rmd'}
 ```
 
-**Figure 9 Cluster specific $k_{cl}$ values for each cancer type.** The overall
+**Figure 6 Cluster specific $k_{cl}$ values for each cancer type.** The overall
 $k$ value is the product of $k_{tis} \times k_{cl}$. The cluster-specific value
 represents the relative aggressiveness of each cluster within the cancer type.
 For example clusters 1, 2, and 6 Glioblastoma (GBM) are apparently much less
@@ -106,7 +103,7 @@ cat("\\newpage")
 
 Our estimates of tissue-specific cluster effects, in contrast, ranged from less
 than 1 up to about 3 or 4, reflecting that some clusters are either less deadly
-or more deadly than other clusters within each cancer type (**Figure 9**). A
+or more deadly than other clusters within each cancer type (**Figure 6**). A
 cluster-specific rate of 1 represents the typical rate for this tissue type. For
 several cancers (_e.g._ PRAD, kidney chromophobe (KICH), diffuse large B-cell
 lymphoma (DBLC), thyroid cancer (THCA)) the posterior estimates are largely
